--- a/templates/default/targets.conf.erb
+++ b/templates/default/targets.conf.erb
@@ -1,6 +1,6 @@
 <%= node["openstack"]["block-storage"]["custom_template_banner"] %>
 
-<% if %w{redhat centos fedora}.include?(node["platform"]) %>
+<% if %w{redhat centos fedora suse}.include?(node["platform"]) %>
 include /var/lib/cinder/volumes/*
 <% end %>
 <% if %w{debian ubuntu}.include?(node["platform"]) %>
