Typo in config name
The actual config variable is nfs_shares_config

Change-Id: I471b3de89a54d78775651f7ca141b13c6ef2b823

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -614,7 +614,7 @@ netapp_server_hostname=<%= h %>
 netapp_server_port=<%= node["openstack"]["block-storage"]["netapp"]["netapp_server_port"] %>
 netapp_login=<%= node["openstack"]["block-storage"]["netapp"]["netapp_server_login"] %>
 netapp_password=<%= node["openstack"]["block-storage"]["netapp"]["netapp_server_password"] %>
-nfs_share_config=<%= node["openstack"]["block-storage"]["nfs"]["shares_config"] %>
+nfs_shares_config=<%= node["openstack"]["block-storage"]["nfs"]["shares_config"] %>
 
 <% end %>
 
