Turning nfs default options into attributes
forgot to include these two defaults as attributes in the initial
nfs support submission.

This change allows the user to tweak nfs_disk_util and nfs_sparsed_volumes

Change-Id: Ic4f03d1059b75789d465bbb7db71aa89ea61b94d

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -615,6 +615,8 @@ netapp_server_port=<%= node["openstack"]["block-storage"]["netapp"]["netapp_serv
 netapp_login=<%= node["openstack"]["block-storage"]["netapp"]["netapp_server_login"] %>
 netapp_password=<%= node["openstack"]["block-storage"]["netapp"]["netapp_server_password"] %>
 nfs_shares_config=<%= node["openstack"]["block-storage"]["nfs"]["shares_config"] %>
+nfs_disk_util=<%= node["openstack"]["block-storage"]["nfs"]["nfs_disk_util"] %>
+nfs_sparsed_volumes=<%= node["openstack"]["block-storage"]["nfs"]["nfs_sparsed_volumes"] %>
 
 <% end %>
 
