Enable ceilometer metering
Sets cronjob for audit and control_exchange

Change-Id: Ib8626f0b756f8a4f0294a5451bdf759ff2ae675e

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -170,6 +170,9 @@ auth_strategy=keystone
 #### (StrOpt) The strategy to use for auth. Supports noauth, keystone, and
 ####          deprecated.
 
+<% if node["openstack"]["block-storage"]["rabbit"]["control_exchange"] %>
+control_exchange=<%=node["openstack"]["block-storage"]["rabbit"]["control_exchange"]%>
+<% end %>
 # control_exchange=cinder
 #### (StrOpt) AMQP exchange to connect to if using RabbitMQ or Qpid
 
