--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -41,6 +41,8 @@ notification_driver=cinder.openstack.common.notifier.rpc_notifier
 
 <% if node["openstack"]["block-storage"]["syslog"]["use"] %>
 log_config = /etc/openstack/logging.conf
+<% else %>
+log_file = /var/log/cinder/cinder.log
 <% end %>
 
 ######## defined in cinder.flags ########
