--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -361,9 +361,11 @@ rpc_response_timeout=<%= node["openstack"]["block-storage"]["rpc_response_timeou
 #### (ListOpt) Modules of exceptions that are permitted to be recreatedupon
 ####           receiving exception data from an rpc call.
 
+
+<% if node["openstack"]["block-storage"]["mq"]["service_type"] == "rabbitmq"  %>
+
 # fake_rabbit=false
 #### (BoolOpt) If passed, use a fake RabbitMQ provider
-
 
 ######## defined in cinder.openstack.common.rpc.impl_kombu ########
 
@@ -420,50 +422,58 @@ rabbit_virtual_host=<%= node["openstack"]["block-storage"]["rabbit"]["vhost"] %>
 #### (IntOpt) maximum retries with trying to connect to RabbitMQ (the
 ####          default of 0 implies an infinite retry count)
 
+<% end %>
 
+
+<% if node["openstack"]["block-storage"]["mq"]["service_type"] == "qpid"  %>
+
+##### QPID #####
 ######## defined in cinder.openstack.common.rpc.impl_qpid ########
+rpc_backend=nova.openstack.common.rpc.impl_qpid
 
-# qpid_hostname=localhost
+qpid_hostname=<%= node["openstack"]["block-storage"]["mq"]["qpid"]["host"] %>
 #### (StrOpt) Qpid broker hostname
 
-# qpid_port=5672
+qpid_port=<%= node["openstack"]["block-storage"]["mq"]["qpid"]["port"] %>
 #### (StrOpt) Qpid broker port
 
-# qpid_username=
+qpid_username=<%= node["openstack"]["block-storage"]["mq"]["qpid"]["username"] %>
 #### (StrOpt) Username for qpid connection
 
-# qpid_password=
+qpid_password=<%= node["openstack"]["block-storage"]["mq"]["qpid"]["password"] %>
 #### (StrOpt) Password for qpid connection
 
-# qpid_sasl_mechanisms=
+qpid_sasl_mechanisms=<%= node["openstack"]["block-storage"]["mq"]["qpid"]["sasl_mechanisms"] %>
 #### (StrOpt) Space separated list of SASL mechanisms to use for auth
 
-# qpid_reconnect=true
+qpid_reconnect=<%= node["openstack"]["block-storage"]["mq"]["qpid"]["reconnect"] %>
 #### (BoolOpt) Automatically reconnect
 
-# qpid_reconnect_timeout=0
+qpid_reconnect_timeout=<%= node["openstack"]["block-storage"]["mq"]["qpid"]["reconnect_timeout"] %>
 #### (IntOpt) Reconnection timeout in seconds
 
-# qpid_reconnect_limit=0
+qpid_reconnect_limit=<%= node["openstack"]["block-storage"]["mq"]["qpid"]["reconnect_limit"] %>
 #### (IntOpt) Max reconnections before giving up
 
-# qpid_reconnect_interval_min=0
+qpid_reconnect_interval_min=<%= node["openstack"]["block-storage"]["mq"]["qpid"]["reconnect_interval_min"] %>
 #### (IntOpt) Minimum seconds between reconnection attempts
 
-# qpid_reconnect_interval_max=0
+qpid_reconnect_interval_max=<%= node["openstack"]["block-storage"]["mq"]["qpid"]["reconnect_interval_max"] %>
 #### (IntOpt) Maximum seconds between reconnection attempts
 
-# qpid_reconnect_interval=0
+qpid_reconnect_interval=<%= node["openstack"]["block-storage"]["mq"]["qpid"]["reconnect_interval"] %>
 #### (IntOpt) Equivalent to setting max and min to the same value
 
-# qpid_heartbeat=60
+qpid_heartbeat=<%= node["openstack"]["block-storage"]["mq"]["qpid"]["heartbeat"] %>
 #### (IntOpt) Seconds between connection keepalive heartbeats
 
-# qpid_protocol=tcp
+qpid_protocol=<%= node["openstack"]["block-storage"]["mq"]["qpid"]["protocol"] %>
 #### (StrOpt) Transport to use, either 'tcp' or 'ssl'
 
-# qpid_tcp_nodelay=true
+qpid_tcp_nodelay=<%= node["openstack"]["block-storage"]["mq"]["qpid"]["tcp_nodelay"] %>
 #### (BoolOpt) Disable Nagle algorithm
+
+<% end %>
 
 
 ######## defined in cinder.openstack.common.rpc.impl_zmq ########
