fix a qpid issue in cinder.conf
added the correct rpc_backend

Change-Id: I8efe287dcf21ff9a6d5931806dbd1e60c2a55de2
Closes-bug: 1257741

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -429,7 +429,7 @@ rabbit_virtual_host=<%= node["openstack"]["block-storage"]["rabbit"]["vhost"] %>
 
 ##### QPID #####
 ######## defined in cinder.openstack.common.rpc.impl_qpid ########
-rpc_backend=nova.openstack.common.rpc.impl_qpid
+rpc_backend=cinder.openstack.common.rpc.impl_qpid
 
 qpid_hostname=<%= node["openstack"]["block-storage"]["mq"]["qpid"]["host"] %>
 #### (StrOpt) Qpid broker hostname
