--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -551,11 +551,12 @@ volume_group=<%= node["openstack"]["block-storage"]["volume"]["volume_group"] %>
 # iscsi_target_prefix=iqn.2010-10.org.openstack:
 #### (StrOpt) prefix for iscsi volumes
 
-# iscsi_ip_address=$my_ip
-#### (StrOpt) use this ip for iscsi
+iscsi_ip_address=<%= node["openstack"]["block-storage"]["volume"]["iscsi_ip_address"] %>
+#### (StrOpt) The IP address where the iSCSI daemon is listening on
 
-# iscsi_port=3260
+iscsi_port=<%= node["openstack"]["block-storage"]["volume"]["iscsi_port"] %>
 #### (IntOpt) The port that the iSCSI daemon is listening on
+
 <% if node["openstack"]["block-storage"]["volume"]["driver"] == "cinder.volume.drivers.RBDDriver" %>
 rbd_pool=<%= node["openstack"]["block-storage"]["rbd_pool"] %>
 #### (StrOpt) the RADOS pool in which rbd volumes are stored
