explicitly set rpc_backend in cinder.conf
Implements: blueprint centos-rhel-for-block
Fixes: bug #1269432

The following is a default value in cinder:

rpc_backend=cinder.openstack.common.rpc.impl_kombu

Using RDO (rhel/centos) packages, this gets overridden in
/usr/share/nova/cinder-dist.conf to 'impl_qpid'.

In order to cleanly set this back to the default value (which is what we
want as a default in the cookbooks), we need to explicitly set this in
cinder.conf

Change-Id: I5bd0c6ed95a6d02202b19708f15a58ec43a2fe6c

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -338,8 +338,8 @@ db_backend=sqlalchemy
 
 ######## defined in cinder.openstack.common.rpc ########
 
-# rpc_backend=cinder.openstack.common.rpc.impl_kombu
 #### (StrOpt) The messaging module to use, defaults to kombu.
+rpc_backend=<%= node["openstack"]["block_storage"]["rpc_backend"] %>
 
 rpc_thread_pool_size=<%= node["openstack"]["block-storage"]["rpc_thread_pool_size"] %>
 
