explicitly set volumes_dir in cinder.conf
Fixes: bug #1269475
Implements: blueprint centos-rhel-for-block

On rhel systems, /usr/share/cinder/cinder-dist.conf sets:

volumes_dir=/etc/cinder/volumes

In order set this back to the default cleanly, we need to explicitly set it in
cinder.conf which will take precedence over the setting in
cinder-dist.conf

Change-Id: Id71efd10b0cbd27b72dfe8ec72c51cde70593b3e

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -577,7 +577,7 @@ rbd_secret_uuid=<%= node["openstack"]["block-storage"]["rbd_secret_uuid"] %>
 iscsi_helper=<%= node["openstack"]["block-storage"]["volume"]["iscsi_helper"] %>
 #### (StrOpt) iscsi target user-land tool to use
 
-# volumes_dir=$state_path/volumes
+volumes_dir=<%= node['openstack']['block-storage']['volume']['volumes_dir'] %>
 #### (StrOpt) Volume configuration file storage directory
 
 
