--- a/templates/default/targets.conf.erb
+++ b/templates/default/targets.conf.erb
@@ -1,7 +1,7 @@
 <%= node["openstack"]["block-storage"]["custom_template_banner"] %>
 
 <% if %w{redhat centos fedora suse}.include?(node["platform"]) %>
-include /var/lib/cinder/volumes/*
+include <%= node['openstack']['block-storage']['volume']['volumes_dir'] %>/*
 <% end %>
 <% if %w{debian ubuntu}.include?(node["platform"]) %>
 include /etc/tgt/conf.d/*.conf
