Add attribute for notification_driver
- Add default ['openstack']['block-storage']['notification_driver'] attributes
- Value defaults to the same as before, so no change, but attribute can
  be overridden.
- Add test for the attribute
- Add README.md entry for the attribute

Change-Id: I3ee6f044a0d9d7a46f5e0225ae440fac4f9255a3
Closes-Bug: #1275714

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -12,7 +12,7 @@ verbose=<%= node["openstack"]["block-storage"]["verbose"] %>
 
 # lock_path
 lock_path=<%= node["openstack"]["block-storage"]["lock_path"] %>
-notification_driver=cinder.openstack.common.notifier.rpc_notifier
+notification_driver=<%= node["openstack"]["block-storage"]["notification_driver"] %>
 
 # log_config=<None>
 #### (StrOpt) If this option is specified, the logging configuration file
