Change platform? check in template
Rendering this template currently returns a
Chef::Mixin::Template::TemplateError error on the platform? method.  We
could change the method to node.platform? however this then triggers an
FC028 error.

Note that this issue is only encountered when
node[openstack][block-storage][volume][create_volume_group] set to
true.

Change-Id: I4d5ce97762c6b82bbf10e8194c482049eb3a6620
Closes-Bug: #1280285

--- a/templates/default/cinder-group-active.erb
+++ b/templates/default/cinder-group-active.erb
@@ -13,7 +13,7 @@
 # Short-Description: cinder volume group active script
 ### END INIT INFO
 
-<% if platform?(%w{centos redhat amazon scientific}) %>
+<% if %w{centos redhat amazon scientific}.include? node.platform %>
 . /etc/rc.d/init.d/functions
 <% end %>
 
@@ -23,10 +23,10 @@ start()
   if [ $? -ne 0 ]; then
     echo -n "Activating cinder volume group ..."
     vgcreate <%= @volume_name %> $(losetup --show -f <%= @volume_file %>)
-    <% if platform?(%w{centos redhat amazon scientific}) %>
+    <% if %w{centos redhat amazon scientific}.include? node.platform %>
     success
     echo
-    <% elsif platform?(%w{debian ubuntu}) %>
+    <% elsif %w{debian ubuntu}.include? node.platform %>
     echo "SUCCESS"
     <% end %>
   fi
