--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -906,3 +906,55 @@ vmware_image_transfer_timeout_secs = <%= node['openstack']['block-storage']['vmw
 # less than the configured value. (integer value)
 vmware_max_objects_retrieval = <%= node['openstack']['block-storage']['vmware']['vmware_max_objects_retrieval'] %>
 <% end %>
+
+######## defined in cinder.openstack.common.cfg:CommonConfigOpts ########
+<% if node["openstack"]["block-storage"]["volume"]["driver"] == "cinder.volume.drivers.gpfs.GPFSDriver" %>
+
+# Specifies the path of the GPFS directory where Block Storage
+# volume and snapshot files are stored. (string value)
+gpfs_mount_point_base = <%= node["openstack"]["block-storage"]["gpfs"]["gpfs_mount_point_base"] %>
+
+<% if node['openstack']['block-storage']['gpfs']['gpfs_images_dir'] %>
+# Specifies the path of the Image service repository in GPFS.
+# Leave undefined if not storing images in GPFS. (string
+# value)
+gpfs_images_dir = <%= node['openstack']['block-storage']['gpfs']['gpfs_images_dir'] %>
+<% end %>
+
+# Specifies the type of image copy to be used.  Set this when
+# the Image service repository also uses GPFS so that image
+# files can be transferred efficiently from the Image service
+# to the Block Storage service. There are two valid values:
+# "copy" specifies that a full copy of the image is made;
+# "copy_on_write" specifies that copy-on-write optimization
+# strategy is used and unmodified blocks of the image file are
+# shared efficiently. (string value)
+gpfs_images_share_mode = <%= node['openstack']['block-storage']['gpfs']['gpfs_images_share_mode'] %>
+
+# Specifies an upper limit on the number of indirections
+# required to reach a specific block due to snapshots or
+# clones.  A lengthy chain of copy-on-write snapshots or
+# clones can have a negative impact on performance, but
+# improves space utilization.  0 indicates unlimited clone
+# depth. (integer value)
+gpfs_max_clone_depth = <%= node['openstack']['block-storage']['gpfs']['gpfs_max_clone_depth'] %>
+
+# Specifies that volumes are created as sparse files which
+# initially consume no space. If set to False, the volume is
+# created as a fully allocated file, in which case, creation
+# may take a significantly longer time. (boolean value)
+gpfs_sparse_volumes = <%= node['openstack']['block-storage']['gpfs']['gpfs_sparse_volumes'] %>
+
+# Specifies the storage pool that volumes are assigned to.  By
+# default, the system storage pool is used. (string value)
+gpfs_storage_pool = <%= node['openstack']['block-storage']['gpfs']['gpfs_storage_pool'] %>
+<% end %>
+
+san_ip=<%= node["openstack"]["block-storage"]["storwize"]["san_ip"] %>
+#### (StrOpt) IP address of SAN controller
+
+san_login=<%= node["openstack"]["block-storage"]["storwize"]["san_login"] %>
+#### (StrOpt) Username for SAN controller
+
+san_private_key=<%= node["openstack"]["block-storage"]["storwize"]["san_private_key"] %>
+#### (StrOpt) Filename of private key to use for SSH authentication
