Generalize control_exchange attribute
The control exchange attribute was placed under 'rabbit' but it is
actually a property for 'qpid' too so moved it out at the same level as
the related 'rpc_backend'. Also moved it closer to rpc_backend in the
template.

Documented both attributes.

Change-Id: Iade5a48abbb865cf3a21c9beb8e6cc7783517fb0

--- a/templates/default/cinder.conf.erb
+++ b/templates/default/cinder.conf.erb
@@ -172,13 +172,6 @@ auth_strategy=keystone
 #### (StrOpt) The strategy to use for auth. Supports noauth, keystone, and
 ####          deprecated.
 
-<% if node["openstack"]["mq"]["block-storage"]["rabbit"]["control_exchange"] %>
-control_exchange=<%=node["openstack"]["mq"]["block-storage"]["rabbit"]["control_exchange"]%>
-<% end %>
-# control_exchange=cinder
-#### (StrOpt) AMQP exchange to connect to if using RabbitMQ or Qpid
-
-
 ######## defined in cinder.policy ########
 
 # policy_file=policy.json
@@ -331,8 +324,11 @@ snapshot_name_template=<%= node["openstack"]["block-storage"]["snapshot_name_tem
 
 ######## defined in cinder.openstack.common.rpc ########
 
-#### (StrOpt) The messaging module to use, defaults to kombu.
 rpc_backend=<%= node["openstack"]["block_storage"]["rpc_backend"] %>
+#### (StrOpt) The messaging module to use, defaults to kombu.
+
+control_exchange=<%=node['openstack']['block-storage']['control_exchange']%>
+#### (StrOpt) AMQP exchange to connect to if using RabbitMQ or Qpid
 
 rpc_thread_pool_size=<%= node["openstack"]["block-storage"]["rpc_thread_pool_size"] %>
 
