Use platform_family instead of platform
As agreed on the mailing list:
https://groups.google.com/forum/#!topic/opscode-chef-openstack/HEL3KqBQIUM

This will allow the ibm_powerkvm platform to be recognized and will
simplify uses of multiple platforms from the same family.

Change-Id: Iebf2aad9f3b4649fb5c27d2fc93ee60c67e42737
Partially-Implements: blueprint add-ibm-powerkvm-enablement
Implements: blueprint platform-family

--- a/templates/default/cinder-group-active.erb
+++ b/templates/default/cinder-group-active.erb
@@ -13,7 +13,7 @@
 # Short-Description: cinder volume group active script
 ### END INIT INFO
 
-<% if %w{centos redhat amazon scientific}.include? node.platform %>
+<% if %w{rhel}.include? node.platform_family %>
 . /etc/rc.d/init.d/functions
 <% end %>
 
@@ -23,10 +23,10 @@ start()
   if [ $? -ne 0 ]; then
     echo -n "Activating cinder volume group ..."
     vgcreate <%= @volume_name %> $(losetup --show -f <%= @volume_file %>)
-    <% if %w{centos redhat amazon scientific}.include? node.platform %>
+    <% if %w{rhel}.include? node.platform_family %>
     success
     echo
-    <% elsif %w{debian ubuntu}.include? node.platform %>
+    <% elsif %w{debian}.include? node.platform_family %>
     echo "SUCCESS"
     <% end %>
   fi
